@@ -3,6 +3,8 @@ Version: 0.2.3
 Date: ??.01.2024
   Features:
     - Support the `percentage` unit type for statistics.
+  Bugfixes:
+    - Prevent trigger victory when victory has been achieved before this mod was added.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: 03.01.2024
